--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.css
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.css
@@ -4,3 +4,12 @@ img.img-thumbnail {
   min-width: 100px !important;
   margin-bottom: 2px;
 }
+
+.nv-file-over {
+  border: dotted 3px red;
+}
+
+/* this hides the choose file text next to the file inputs */
+input[type="file"] {
+  color: transparent;
+}
