--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -1,32 +1,12 @@
 <div class="row">
   <div class="col-sm-2 img-wrapper" *ngFor="let photo of photos">
-    <img
-      src="{{ photo.url }}"
-      class="img-thumbnail p-1"
-      alt=""
-      [ngClass]="!photo.isApproved && 'not-approved'"
-    />
-
-    <div class="text-center img-text" *ngIf="!photo.isApproved">
-      <span class="text-danger">Awaiting approval</span>
-    </div>
+    <img src="{{ photo.url }}" class="img-thumbnail p-1" alt="" />
 
     <div class="text-center">
-      <button
-        type="button"
-        class="btn btn-sm mr-1"
-        [ngClass]="photo.isMain ? 'btn-success active' : 'btn-secondary'"
-        (click)="setMainPhoto(photo)"
-        [disabled]="photo.isMain || !photo.isApproved"
-      >
+      <button type="button" class="btn btn-sm mr-1">
         Main
       </button>
-      <button
-        type="button"
-        class="btn btn-sm btn-danger"
-        [disabled]="photo.isMain"
-        (click)="deletePhoto(photo.id)"
-      >
+      <button type="button" class="btn btn-sm btn-danger">
         <i class="fa fa-trash-o"></i>
       </button>
     </div>
