ANGULAR - update front end to show new main photo when it is updated on the backend

--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -93,7 +93,11 @@
             </form>
           </tab>
           <tab heading="Photo Edit">
-            <app-photo-editor [photos]="user.photos"></app-photo-editor>
+            <!-- getmemberphotochange is an output prop used to emit the new main photo for the member-edit comp to show on the left -->
+            <app-photo-editor
+              [photos]="user.photos"
+              (getMemberPhotoChange)="updateMainPhoto($event)"
+            ></app-photo-editor>
           </tab>
         </tabset>
       </div>
