--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -3,7 +3,13 @@
     <img src="{{ photo.url }}" class="img-thumbnail p-1" alt="" />
 
     <div class="text-center">
-      <button type="button" class="btn btn-sm mr-1">
+      <button
+        type="button"
+        class="btn btn-sm mr-1"
+        (click)="setMainPhoto(photo)"
+        [disabled]="photo.isMain"
+        [ngClass]="photo.isMain ? 'btn-success active' : 'btn-secondary'"
+      >
         Main
       </button>
       <button type="button" class="btn btn-sm btn-danger">
