--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -12,7 +12,12 @@
       >
         Main
       </button>
-      <button type="button" class="btn btn-sm btn-danger">
+      <button
+        type="button"
+        class="btn btn-sm btn-danger"
+        (click)="deletePhoto(photo.id)"
+        [disabled]="photo.isMain"
+      >
         <i class="fa fa-trash-o"></i>
       </button>
     </div>
