--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -66,7 +66,9 @@
       class="form-control"
       placeholder="Date of Birth"
       formControlName="dateOfBirth"
-      type="date"
+      type="text"
+      bsDatepicker
+      [bsConfig]="bsConfig"
     />
     <div
       class="invalid-feedback"
