--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -51,11 +51,11 @@
               [options]="galleryOptions"
               [images]="galleryImages"
               class="ngx-gallery"
-              style="display: inline-block; margin-bottom: 20px;"
+              style="display: inline-block; margin-bottom: 20px"
             ></ngx-gallery>
           </tab>
           <tab heading="Messages">
-            <p>Messages go here</p>
+            <app-member-messages [recipientId]="user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
