--- a/DatingApp-SPA/src/app/messages/messages.component.html
+++ b/DatingApp-SPA/src/app/messages/messages.component.html
@@ -40,12 +40,14 @@
         <th style="width: 20%">Sent / Received</th>
         <th style="width: 20%"></th>
       </tr>
+      <!-- add query params to use to open tab 3 (messages) on member-detail to show thread -->
       <tr
         *ngFor="let message of messages"
         [routerLink]="[
           '/members',
           messageContainer == 'Outbox' ? message.recipientId : message.senderId
         ]"
+        [queryParams]="{ tab: 3 }"
       >
         <td>{{ message.content }}</td>
         <td>
